@@ -1,16 +1,39 @@
 <?php
 if (!defined('sugarEntry') || !sugarEntry)
   die('Not A Valid Entry Point');
-
-/**
+/*********************************************************************************
+ * 
+ * Copyright (c) 2014 Acniti (http:/www.acniti.com) 
  * Copyright (c) 2010-2012 Prudento (http://www.prudento.com)
  * Copyright (c) 2007-2009 Madcap BV (http://www.madcap.nl)
  * All rights reserved.
  *
  * Permission is granted for use, copying, modification, distribution,
  * and distribution of modified versions of this work as long as the
- * above copyright notice is included.
- */
+ * above copyright notice is included. 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ * 
+ *
+ *  
+ ********************************************************************************/
 
 $mod_strings = array (
   "LBL_BLANK" => "  ",
