@@ -53,7 +53,8 @@ Marked following directories as obsolate:
     iFrames_obsolate
     modules/Activities/language/l_NL.help.index.html obsolate
     modules/Bugs/language/set of html files obsolate
-    modules/Calendar/language/ contains html file
+    modules/Calendar/language/ contains html files
+    modules/Calls/language/ contains various html files
 Diff modules/Activities/language/nl_NL.lang.php no changes bottom file order not similar
 To translate modules/Administration/nl_NL.lang.php this is 1100 lines of translation work
 Translated modules/AOD_Index
@@ -66,3 +67,10 @@ SuiteCRM File modules/AOS_Products_Quotes/language/nl_nl.lang.php
 SuiteCRM File modules/AOS_Quotes/language/nl_nl.lang.php
 Diff modules/Audit/language/nl_NL.lang.php no changes detected
 Diff modules/Bugs/language/nl_NL.lang.php  minor changes detected
+GitHub Commit Changes 20140401
+Diff modules/Calendar/language/nl_NL.lang.php
+  remark days and months different notation: '0' => 'Zo', versus in english "Sun",
+Diff 
+
+
+
